--- a/instagram/.eslintrc.json
+++ b/instagram/.eslintrc.json
@@ -3,6 +3,7 @@
     "rules": {
         "linebreak-style": 0,
         "react/forbid-prop-types": 0,
-        "react/jsx-one-expression-per-line": 0
+        "react/jsx-one-expression-per-line": 0,
+        "quotes": 0
     }
 }
