--- a/instagram/.eslintrc.json
+++ b/instagram/.eslintrc.json
@@ -12,7 +12,9 @@
         "sourceType": "module",
         "ecmaFeatures": {
             "jsx": true,
-            "spread": true
+            "spread": true,
+            "arrowFunctions":true,
+            "classes":true
         }
     }
 }
